static/docs/user/1.0/_sources/cli/apptainer_overlay_create.rst.txt
.. _apptainer_overlay_create:

apptainer overlay create
------------------------

Create EXT3 writable overlay image

Synopsis
~~~~~~~~



  The overlay create command allows to create EXT3 writable overlay image either
  as a single EXT3 image or by adding it automatically to an existing SIF image.

::

  apptainer overlay create <options> image

Examples
~~~~~~~~

::


    To create and add a writable overlay to an existing SIF image:
    $ apptainer overlay create --size 1024 /tmp/image.sif

    To create a single EXT3 writable overlay image:
    $ apptainer overlay create --size 1024 /tmp/my_overlay.img

Options
~~~~~~~

::

      --create-dir strings   directory to create as part of the overlay layout
  -h, --help                 help for create
  -s, --size int             size of the EXT3 writable overlay in MiB (default 64)

SEE ALSO
~~~~~~~~

* :ref:`apptainer overlay <apptainer_overlay>` 	 - Manage an EXT3 writable overlay image

*Auto generated by spf13/cobra on 15-Mar-2022*
